# qbzd

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  package-lock.json  package.json  snapcraft.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  feedback.yml
.github/workflows/: ci.yml  dev.yml  nightly.yml  pages.yml  release.yml
crates/: Cargo.toml
crates/qbz-audio/: Cargo.toml
crates/qbz-audio/src/: alsa_backend.rs  alsa_direct.rs  backend.rs  coreaudio_direct.rs  lib.rs  loudness.rs  pipewire_backend.rs
crates/qbz-audio/src/device_reservation/: linux.rs  stub.rs
crates/qbz-audio/src/visualizer/: ring_buffer.rs
crates/qbz-cmaf/src/: parser.rs
crates/qbz-core/src/: core.rs
crates/qbz-library/src/: database.rs  models.rs
crates/qbz-models/src/: playback.rs  types.rs
crates/qbz-player/src/: queue.rs
crates/qbz-player/src/player/: mod.rs  playback_engine.rs  streaming_source.rs
crates/qbz-qobuz/src/: client.rs
crates/qbzd/: Cargo.toml
crates/qbzd/src/: adapter.rs  config.rs  daemon.rs  login.rs  main.rs  qconnect.rs  resources.rs  session.rs
crates/qbzd/src/api/: audio.rs  auth.rs  events.rs  mod.rs  playback.rs  queue.rs
crates/qconnect-app/src/: startup.rs
crates/qconnect-core/src/: queue.rs  reducer.rs  renderer.rs
crates/qconnect-protocol/src/: decoder.rs  mapper.rs  queue_command_proto.rs
crates/qconnect-transport-ws/src/: transport.rs
docker/: entrypoint.sh  qbzd.toml
docs/: index.html  openapi.yaml
install/: proxmox-dac-watch.sh  proxmox-lxc.sh
packaging/flatpak/: com.blitzfc.qbz.yml
scripts/: check-v2-backend-purity.sh
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: discord_rpc.rs  lib.rs  main.rs  session_lifecycle.rs  tray.rs
src-tauri/src/auto_theme/: generator.rs
src-tauri/src/commands_v2/: ephemeral.rs  helpers.rs  legacy_compat.rs  library.rs  mod.rs  offline_cache.rs  playback.rs  settings.rs
src-tauri/src/config/: audio_settings.rs  library_preferences.rs  window_settings.rs
src-tauri/src/ephemeral_library/: mod.rs
src-tauri/src/offline/: mod.rs
src-tauri/src/offline_cache/: db.rs  downloader.rs  maintenance.rs  mod.rs
src-tauri/src/player/: mod.rs
src/lib/components/: AboutModal.svelte  AddToMixtapeModal.svelte  AlbumCreditsModal.svelte  BulkActionBar.svelte  CastPicker.svelte  DACSetupWizard.svelte  GenreFilterButton.svelte  GenreFilterPopup.svelte  KeybindingsSettings.svelte  LibraryEditModal.svelte  LinkResolverModal.svelte  LocalLibraryFolderAlbumView.svelte  LocalLibraryFolderDetail.svelte  LocalLibraryFolderTree.svelte  LocalLibraryTagEditorModal.svelte  LogsModal.svelte  MusicianModal.svelte  MyQbzNavEditModal.svelte  NowPlayingBar.svelte  PlaylistSuggestions.svelte  PlaylistTagFilter.svelte  QconnectPanel.svelte  QualityFallbackModal.svelte  QueuePanel.svelte  RemoteControlSetupGuide.svelte  Sidebar.svelte  SleepTimerButton.svelte  TitleBar.svelte  TitleBarNav.svelte  TrackReplacementModal.svelte  TrackRow.svelte  VirtualizedArtistGrid.svelte  VirtualizedTrackList.svelte
src/lib/components/immersive/: ImmersiveControls.svelte  ImmersivePlayer.svelte  PlayerControlsCompact.svelte
src/lib/components/lyrics/: LyricsControlsPopover.svelte  LyricsMini.svelte
src/lib/components/views/: AlbumDetailView.svelte  ArtistDetailView.svelte  ArtistsByLocationView.svelte  AwardView.svelte  CollectionsView.svelte  DiscographyBuilderView.svelte  FavoritesView.svelte  HomeView.svelte  LabelReleasesView.svelte  LabelView.svelte  LocalLibraryView.svelte  LoginView.svelte  MixtapeCollectionDetailView.svelte  MixtapesView.svelte  OfflineCacheManagerView.svelte  PlaylistDetailView.svelte  PlaylistManagerView.svelte  PurchasesView.svelte  SearchView.svelte  SettingsView.svelte
src/lib/components/wizard/: BitPerfectAppSelector.svelte  WizardStepper.svelte
src/lib/i18n/locales/: de.json  en.json  es.json  fr.json  pt.json
src/lib/services/: miniplayerService.ts  queueArtwork.ts
src/lib/stores/: appearancePreferencesStore.ts  libraryPreferencesStore.ts  libraryTargetTabStore.ts  navigationStore.ts  offlineCacheManagerStore.svelte.ts  offlineCacheManagerStore.test.ts  playerStore.ts  searchBarLocationStore.ts  sleepTimerStore.ts  titleBarStore.ts  titlebarNavStore.ts
src/lib/types/: folderTree.ts  index.ts
src/lib/utils/: artworkPalette.ts
src/routes/: +page.svelte
